prod: added rna complement generator

--- a/complementaryrna.html
+++ b/complementaryrna.html
@@ -6,18 +6,18 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MathFlare - DNA Complement Generator</title>
+    <title>MathFlare - RNA Complement Generator</title>
     <meta name="title" content="MathFlare - DNA Complement Generator">
     <meta name="og:title" content="MathFlare - DNA Complement Generator" />
     <meta name="twitter:title" content="MathFlare - DNA Complement Generator" />
     <meta name="keywords"
-        content="complementary dna, dna complement, dna complement generator, dna, biology, genetics, mathflare, math flare">
+        content="complementary rna, rna complement, rna complement generator, rna, biology, genetics, mathflare, math flare">
     <meta name="description" content="Calculate the average of a set of numbers." />
     <meta name="og:description" content="Calculate the average of a set of numbers." />
     <meta name="twitter:description" content="Calculate the average of a set of numbers." />
     <meta name="author" content="MathFlare.xyz" />
-    <meta name="og:url" content="https://www.mathflare.xyz/complementarydna" />
-    <link rel="canonical" href="https://www.mathflare.xyz/complementarydna">
+    <meta name="og:url" content="https://www.mathflare.xyz/complementaryrna" />
+    <link rel="canonical" href="https://www.mathflare.xyz/complementaryrna">
     <meta name="og:image" content="https://www.mathflare.xyz/Assets/logo.png" />
     <meta name="og:locale" content="en_US" />
     <meta name="og:type" content="website" />
@@ -44,7 +44,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">DNA Complement Generator</h1>
+        <h1 class="text-white">RNA Complement Generator</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
             <div class="center-form">
@@ -57,27 +57,27 @@
             <br />
             <h4 class="text-white">Enter the DNA sequence</h4>
             <div class="center-form">
-                <textarea id="dnastring" placeholder="eg. ATTGC" class="form-control message" required></textarea>
+                <textarea id="rnastring" placeholder="eg. ATTGC" class="form-control message" required></textarea>
             </div>
             <br />
             <div class="center-form">
-                <input type="submit" id="compdnacalc" class="btn btn-success btn-lg" value="Generate">
+                <input type="submit" id="comprnacalc" class="btn btn-success btn-lg" value="Generate">
             </div>
             <div class="my-4">
-                <a href="https://duckduckgo.com/?q=generate+dna+complement" target="_blank" rel="noopener"
+                <a href="https://duckduckgo.com/?q=generate+rna+complement" target="_blank" rel="noopener"
                     class="btn btn-outline-light">Find information on the web</a>
             </div>
         </form>
         <p id="hasxmessage" class="text-warning p-2"></p>
         <div style="max-height: 1em;">
-            <p class="text-success text-break" id="compdnaout"></p>
+            <p class="text-success text-break" id="comprnaout"></p>
         </div>
         <br />
     </div>
     <!-- SCRIPTS START -->
     <script src="dist/jquery-3.6.0-min.js"></script>
     <script src="dist/bootstrap-5.1-min.js"></script>
-    <script src="dist/complementary-dna.js"></script>
+    <script src="dist/complementary-rna.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
 </body>
