prod: added cell part image in the cheat sheet

--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -92,6 +92,8 @@
                     <a href="#periodictable"
                         class="list-group-item list-group-item-dark list-group-item-action">Periodic
                         Table</a>
+                    <a href="#cell" class="list-group-item list-group-item-dark list-group-item-action">Plant and Animal
+                        Cell Parts</a>
                 </div>
             </div>
         </div>
@@ -460,7 +462,13 @@
             </section>
             <section id="periodictable">
                 <h3>Periodic Table</h3>
-                <img src="Assets/periodic-table.png" alt="periodic table of elements" class="border"
+                <img src="Assets/periodic-table.png" alt="periodic table of elements" class="border mb-3"
+                    onclick="openImage(this.src, this.alt, this.naturalWidth, this.naturalHeight)" width="100%"
+                    height="100%" data-bs-toggle="tooltip" data-bs-placement="left" title="Click to open" />
+            </section>
+            <section id="cell">
+                <h3>Plant and Animal Cell Parts</h3>
+                <img src="Assets/plant-animal-cell.png" alt="plant and animal cell parts" class="border mb-3"
                     onclick="openImage(this.src, this.alt, this.naturalWidth, this.naturalHeight)" width="100%"
                     height="100%" data-bs-toggle="tooltip" data-bs-placement="left" title="Click to open" />
             </section>
