prod: added dna-rna in cheat sheet

--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -94,6 +94,8 @@
                         Table</a>
                     <a href="#cell" class="list-group-item list-group-item-dark list-group-item-action">Plant and Animal
                         Cell Parts</a>
+                    <a href="#dnarna" class="list-group-item list-group-item-dark list-group-item-action">DNA and RNA
+                        Parts</a>
                 </div>
             </div>
         </div>
@@ -469,6 +471,12 @@
             <section id="cell">
                 <h3>Plant and Animal Cell Parts</h3>
                 <img src="Assets/plant-animal-cell.png" alt="plant and animal cell parts" class="border mb-3"
+                    onclick="openImage(this.src, this.alt, this.naturalWidth, this.naturalHeight)" width="100%"
+                    height="100%" data-bs-toggle="tooltip" data-bs-placement="left" title="Click to open" />
+            </section>
+            <section id="dnarna">
+                <h3>DNA and RNA Parts</h3>
+                <img src="Assets/dna-rna.png" alt="plant and animal cell parts" class="border mb-3"
                     onclick="openImage(this.src, this.alt, this.naturalWidth, this.naturalHeight)" width="100%"
                     height="100%" data-bs-toggle="tooltip" data-bs-placement="left" title="Click to open" />
             </section>
