prod: linked to status page

--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
     <link rel="icon" type="image/png" href="Assets/android-chrome-512x512.png" sizes=512x512>
     <link rel="apple-touch-icon" sizes="180x180" href="Assets/apple-touch-icon.png">
     <link rel="icon" href="https://www.mathflare.xyz/Assets/favicon.ico">
+    <style>
+        .typewriter {
+            animation: typewriter 4s steps(4) 1s 1 normal both,
+                blinkTextCursor 500ms steps(44) infinite normal;
+        }
+    </style>
     <!-- SCRIPTS -->
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script src="dist/navbar.js" defer></script>
@@ -151,7 +157,7 @@
         window.addEventListener('load', () => {
             document.querySelector('#home-link').classList.add('active');
         });
-        
+
         const donateLinks = document.querySelectorAll('.donate-link');
         donateLinks.forEach(link => {
             link.addEventListener('mouseover', () => {
