beta: graphing calculator

--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -459,6 +459,14 @@
                             <td>a<sup>3</sup> - b<sup>3</sup></td>
                             <td>(a - b)(a<sup>2</sup> + ab + b<sup>2</sup>)</td>
                         </tr>
+                        <tr>
+                            <td>(a - b + c)<sup>2</sup></td>
+                            <td>a<sup>2</sup> + b<sup>2</sup> + c<sup>2</sup> - 2ab - 2bc + 2ac </td>
+                        </tr>
+                        <tr>
+                            <td>(a - b - c)<sup>2</sup></td>
+                            <td>a<sup>2</sup> + b<sup>2</sup> + c<sup>2</sup> - 2ab + 2bc - 2ac </td>
+                        </tr>
                     </tbody>
                 </table>
             </section>
