--- a/linear-systems.html
+++ b/linear-systems.html
@@ -93,6 +93,10 @@
         </div>
         <br />
         <br />
+        <h5><i class="bi bi-gear-wide-connected" data-bs-toggle="tooltip" data-bs-placement="top"
+                title="Experimental Feature"></i>
+            Function Grapher</h5>
+        <canvas id="canvas" height="400" width="400" style="border: 2px solid white"></canvas>
         <div class="my-4">
             <a href="https://duckduckgo.com/?q=Solve+Linear+2x2+systems" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
