refactor: minor changes

--- a/area.html
+++ b/area.html
@@ -52,7 +52,7 @@
                 <div class="input-group">
                     <span class="input-group-text">cm</span>
                     <input type="number" id="squareside" placeholder="side" class="form-control mb-0 input-group-item"
-                        step="0.1" min="0" />
+                        step="0.1"  />
                 </div>
             </div>
             <br />
@@ -76,7 +76,7 @@
                 <div class="input-group">
                     <span class="input-group-text">cm</span>
                     <input type="number" id="paraw" placeholder="width" class="form-control mb-0 input-group-item"
-                        step="0.1" min="0" />
+                        step="0.1"  />
                 </div>
             </div>
             <br />
@@ -84,7 +84,7 @@
                 <div class="input-group">
                     <span class="input-group-text">cm</span>
                     <input type="number" id="parah" placeholder="height" class="form-control mb-0 input-group-item"
-                        step="0.1" min="0" />
+                        step="0.1"  />
                 </div>
             </div>
             <br />
@@ -108,7 +108,7 @@
                 <div class="input-group">
                     <span class="input-group-text">cm</span>
                     <input type="number" id="tria" placeholder="segment" class="form-control mb-0 input-group-item"
-                        step="0.1" min="0" />
+                        step="0.1"  />
                 </div>
             </div>
             <br />
@@ -116,7 +116,7 @@
                 <div class="input-group">
                     <span class="input-group-text">cm</span>
                     <input type="number" id="trib" placeholder="corresponding height"
-                        class="form-control mb-0 input-group-item" step="0.1" min="0" />
+                        class="form-control mb-0 input-group-item" step="0.1"  />
                 </div>
             </div>
             <br />
@@ -140,7 +140,7 @@
                 <div class="input-group">
                     <span class="input-group-text">cm</span>
                     <input type="number" id="etris" placeholder="side" class="form-control mb-0 input-group-item"
-                        step="0.1" min="0" />
+                        step="0.1"  />
                 </div>
             </div>
             <br />
@@ -164,7 +164,7 @@
                 <div class="input-group">
                     <span class="input-group-text">cm</span>
                     <input type="number" id="circler" placeholder="radius" class="form-control mb-0 input-group-item"
-                        step="0.1" min="0" />
+                        step="0.1"  />
                 </div>
             </div>
             <br />
@@ -188,7 +188,7 @@
                 <div class="input-group">
                     <span class="input-group-text">cm</span>
                     <input type="number" id="trapa" placeholder="small segment"
-                        class="form-control mb-0 input-group-item" step="0.1" min="0" />
+                        class="form-control mb-0 input-group-item" step="0.1"  />
                 </div>
             </div>
             <br />
@@ -196,7 +196,7 @@
                 <div class="input-group">
                     <span class="input-group-text">cm</span>
                     <input type="number" id="trapb" placeholder="large segment"
-                        class="form-control mb-0 input-group-item" step="0.1" min="0" />
+                        class="form-control mb-0 input-group-item" step="0.1"  />
                 </div>
             </div>
             <br />
@@ -204,7 +204,7 @@
                 <div class="input-group">
                     <span class="input-group-text">cm</span>
                     <input type="number" id="trapc" placeholder="height" class="form-control mb-0 input-group-item"
-                        step="0.1" min="0" />
+                        step="0.1"  />
                 </div>
             </div>
             <br />
