--- a/bmi.html
+++ b/bmi.html
@@ -52,7 +52,7 @@
                 <div class="input-group">
                     <span class="input-group-text">Kg</span>
                     <input type="number" id="weight" placeholder="weight" class="form-control mb-0 input-group-item"
-                        step="0.1" min="0" />
+                        step="0.1"  />
                 </div>
             </div>
             <br />
@@ -61,7 +61,7 @@
                 <div class="input-group">
                     <span class="input-group-text">cm</span>
                     <input type="number" id="height" placeholder="height" class="form-control mb-0 input-group-item"
-                        step="0.1" min="0" />
+                        step="0.1"  />
                 </div>
             </div>
             <br />
