--- a/carboncombustions.html
+++ b/carboncombustions.html
@@ -57,7 +57,7 @@
             <br />
             <h4 class="text-white">Enter the numbers of Carbons C</h4>
             <div class="center-form">
-                <input type="number" id="carbons" placeholder="carbons" class="form-control mb-0" step="1" min="0" />
+                <input type="number" id="carbons" placeholder="carbons" class="form-control mb-0" step="1"  />
             </div>
             <br />
             <div class="center-form">
