--- a/ctemp.html
+++ b/ctemp.html
@@ -61,7 +61,7 @@
             </div>
             <h4 class="text-white m-2">Kelvin</h4>
             <div class="center-form">
-                <input id="inputKelvin" class="form-control mb-0" type="number" min="0" placeholder="Kelvin"
+                <input id="inputKelvin" class="form-control mb-0" type="number"  placeholder="Kelvin"
                     oninput="temperatureConverter(this.id,this.value)"
                     onchange="temperatureConverter(this.id,this.value)" step="0.1">
             </div>
