--- a/fractionaddition.html
+++ b/fractionaddition.html
@@ -11,7 +11,7 @@
     <meta name="og:title" content="MathFlare - Fractions Addition" />
     <meta name="twitter:title" content="MathFlare - Fractions Addition" />
     <meta name="keywords"
-        content="fractions addition, algebra fraction, algebra, math, mathflare, math flare">
+        content="fractions addition, add fractions, fractions, algebra fraction, algebra, math, mathflare, math flare">
     <meta name="description" content="Add Fractions" />
     <meta name="og:description" content="Add Fractions" />
     <meta name="twitter:description" content="Add Fractions" />
@@ -47,14 +47,13 @@
         <h1 class="text-white">Fraction Addition</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
-            <h4 class="text-white"><sup>x</sup><span class="text-warning">&frasl;</span><sub>y</sub> <span class="text-warning">+</span> <sup>a</sup><span class="text-warning">&frasl;</span><sub>b</sub></h4>
+            <h4 class="text-white"><sup>x</sup><span class="text-warning">&frasl;</span><sub>y</sub> <span
+                    class="text-warning">+</span> <sup>a</sup><span class="text-warning">&frasl;</span><sub>b</sub></h4>
             <div class="center-form">
                 <div class="input-group">
                     <span class="input-group-text">numerator</span>
-                    <input type="number" id="x" placeholder="x" class="form-control input-group-item" step="0.1"
-                        min="0" />
-                    <input type="number" id="a" placeholder="a" class="form-control input-group-item" step="0.1"
-                        min="0" />
+                    <input type="number" id="x" placeholder="x" class="form-control input-group-item" step="0.1" />
+                    <input type="number" id="a" placeholder="a" class="form-control input-group-item" step="0.1" />
                     <span class="input-group-text">numerator</span>
                 </div>
             </div>
@@ -62,10 +61,8 @@
             <div class="center-form">
                 <div class="input-group">
                     <span class="input-group-text">denominator</span>
-                    <input type="number" id="y" placeholder="y" class="form-control input-group-item" step="0.1"
-                        min="0" />
-                    <input type="number" id="b" placeholder="b" class="form-control input-group-item" step="0.1"
-                        min="0" />
+                    <input type="number" id="y" placeholder="y" class="form-control input-group-item" step="0.1" />
+                    <input type="number" id="b" placeholder="b" class="form-control input-group-item" step="0.1" />
                     <span class="input-group-text">denominator</span>
                 </div>
             </div>
