--- a/lcm.html
+++ b/lcm.html
@@ -49,12 +49,12 @@
         <form autocomplete="off">
             <h4 class="text-white">Enter the first number</h4>
             <div class="center-form">
-                <input type="number" id="lcma" placeholder="a" class="form-control mb-0" step="0.1" min="0" />
+                <input type="number" id="lcma" placeholder="a" class="form-control mb-0" step="0.1"  />
             </div>
             <br />
             <h4 class="text-white">Enter the second number</h4>
             <div class="center-form">
-                <input type="number" id="lcmb" placeholder="b" class="form-control mb-0" step="0.1" min="0" />
+                <input type="number" id="lcmb" placeholder="b" class="form-control mb-0" step="0.1"  />
             </div>
             <br />
             <div class="center-form">
