--- a/loan.html
+++ b/loan.html
@@ -61,7 +61,7 @@
                         <option value="&#8356;">&#8356; - Lira</option>
                     </select>
                     <input type="number" id="amount" placeholder="&#164;amount" class="form-control input-group-item"
-                        style="width: 65%" step="0.1" min="0" />
+                        style="width: 65%" step="0.1"  />
                 </div>
             </div>
             <br />
@@ -70,7 +70,7 @@
                 <div class="input-group">
                     <span class="input-group-text">%</span>
                     <input type="number" id="interest" placeholder="interest rate"
-                        class="form-control mb-0 input-group-item" step="0.1" min="0" />
+                        class="form-control mb-0 input-group-item" step="0.1"  />
                 </div>
             </div>
             <br />
@@ -79,7 +79,7 @@
                 <div class="input-group">
                     <span class="input-group-text">years</span>
                     <input type="number" id="term" placeholder="term" class="form-control mb-0 input-group-item"
-                        step="0.1" min="0" />
+                        step="0.1"  />
                 </div>
             </div>
             <br />
