--- a/logar.html
+++ b/logar.html
@@ -49,13 +49,13 @@
             <h4 class="text-white">Enter the number</h4>
             <div class="center-form">
                 <input type="number" id="number" placeholder="number" name="side" class="form-control mb-0" step="0.1"
-                    min="0" />
+                     />
             </div>
             <br />
             <h4 class="text-white">Enter the logarithm's base(10 is the default)</h4>
             <div class="center-form">
                 <input type="number" id="base" placeholder="base" value="10" name="side" class="form-control mb-0"
-                    step="0.1" min="0" />
+                    step="0.1"  />
             </div>
             <br />
             <div class="center-form">
@@ -76,7 +76,7 @@
         <form autocomplete="off">
             <div class="center-form">
                 <input type="number" id="natnum" placeholder="number" name="side" class="form-control mb-0" step="0.1"
-                    min="0" />
+                     />
             </div>
             <br />
             <div class="center-form">
