--- a/prightside.html
+++ b/prightside.html
@@ -50,13 +50,13 @@
             <h4 class="text-white">Enter the triangle's hypotenuse</h4>
             <div class="center-form">
                 <input type="number" id="hypo" placeholder="hypotenuse" name="hypotenuse" class="form-control mb-0"
-                    step="0.1" min="0" />
+                    step="0.1"  />
             </div>
             <br />
             <h4 class="text-white">Enter one of the right triangle's leg</h4>
             <div class="center-form">
                 <input type="number" id="side" placeholder="leg" name="side" class="form-control mb-0" step="0.1"
-                    min="0" />
+                     />
             </div>
             <br />
             <div class="center-form">
