--- a/diagpolyg.html
+++ b/diagpolyg.html
@@ -54,7 +54,7 @@
                 <div class="input-group">
                     <span class="input-group-text">cm</span>
                     <input type="number" id="sside" placeholder="side" class="form-control mb-0 input-group-item"
-                        min="0" />
+                         />
                 </div>
             </div>
             <br />
@@ -78,7 +78,7 @@
                 <div class="input-group">
                     <span class="input-group-text">cm</span>
                     <input type="number" id="pcd" placeholder="first side" class="form-control mb-0 input-group-item"
-                        min="0" step="0.1" />
+                         step="0.1" />
                 </div>
             </div>
             <br />
@@ -86,14 +86,14 @@
                 <div class="input-group">
                     <span class="input-group-text">cm</span>
                     <input type="number" id="pad" placeholder="second side" class="form-control mb-0 input-group-item"
-                        min="0" step="0.1" />
+                         step="0.1" />
                 </div>
             </div>
             <br />
             <div class="center-form">
                 <div class="input-group">
                     <span class="input-group-text">degrees&#176;</span>
-                    <input type="number" id="pd" placeholder="angle" class="form-control mb-0 input-group-item" min="0"
+                    <input type="number" id="pd" placeholder="angle" class="form-control mb-0 input-group-item" 
                         step="0.1" />
                 </div>
             </div>
