--- a/fact.html
+++ b/fact.html
@@ -48,7 +48,7 @@
         <form autocomplete="off">
             <h4 class="text-white">Enter the number</h4>
             <div class="center-form">
-                <input type="number" id="number" placeholder="number" class="form-control mb-0" step="0.1" min="0" />
+                <input type="number" id="number" placeholder="number" class="form-control mb-0" step="0.1"  />
             </div>
             <br />
             <div class="center-form">
