--- a/perimeter.html
+++ b/perimeter.html
@@ -49,7 +49,7 @@
         <form autocomplete="off">
             <h4 class="text-white"><i class="bi bi-square"></i> Square</h4>
             <div class="center-form">
-                <input type="number" id="squaren" placeholder="side" class="form-control mb-0" step="0.1" min="0" />
+                <input type="number" id="squaren" placeholder="side" class="form-control mb-0" step="0.1"  />
             </div>
             <br />
             <div class="center-form">
@@ -69,11 +69,11 @@
         <form autocomplete="off">
             <h4 class="text-white"><i class="bi bi-file"></i> Parallelogram</h4>
             <div class="center-form">
-                <input type="number" id="paraw" placeholder="width" class="form-control mb-0" step="0.1" min="0" />
+                <input type="number" id="paraw" placeholder="width" class="form-control mb-0" step="0.1"  />
             </div>
             <br />
             <div class="center-form">
-                <input type="number" id="parah" placeholder="height" class="form-control mb-0" step="0.1" min="0" />
+                <input type="number" id="parah" placeholder="height" class="form-control mb-0" step="0.1"  />
             </div>
             <br />
             <div class="center-form">
@@ -93,15 +93,15 @@
         <form autocomplete="off">
             <h4 class="text-white"><i class="bi bi-triangle"></i> Triangle</h4>
             <div class="center-form">
-                <input type="number" id="tria" placeholder="first side" class="form-control mb-0" step="0.1" min="0" />
+                <input type="number" id="tria" placeholder="first side" class="form-control mb-0" step="0.1"  />
             </div>
             <br />
             <div class="center-form">
-                <input type="number" id="trib" placeholder="second side" class="form-control mb-0" step="0.1" min="0" />
+                <input type="number" id="trib" placeholder="second side" class="form-control mb-0" step="0.1"  />
             </div>
             <br />
             <div class="center-form">
-                <input type="number" id="tric" placeholder="third side" class="form-control mb-0" step="0.1" min="0" />
+                <input type="number" id="tric" placeholder="third side" class="form-control mb-0" step="0.1"  />
             </div>
             <br />
             <div class="center-form">
@@ -121,7 +121,7 @@
         <form autocomplete="off">
             <h4 class="text-white"><i class="bi bi-triangle"></i> Equilateral Triangle</h4>
             <div class="center-form">
-                <input type="number" id="trin" placeholder="side" class="form-control mb-0" step="0.1" min="0" />
+                <input type="number" id="trin" placeholder="side" class="form-control mb-0" step="0.1"  />
             </div>
             <br />
             <div class="center-form">
@@ -141,7 +141,7 @@
         <form autocomplete="off">
             <h4 class="text-white"><i class="bi bi-circle"></i> Circle</h4>
             <div class="center-form">
-                <input type="number" id="circler" placeholder="radius" class="form-control mb-0" step="0.1" min="0" />
+                <input type="number" id="circler" placeholder="radius" class="form-control mb-0" step="0.1"  />
             </div>
             <br />
             <div class="center-form">
