--- a/roots.html
+++ b/roots.html
@@ -49,7 +49,7 @@
         <form autocomplete="off">
             <h3 class="text-white">Square Root</h3>
             <div class="center-form">
-                <input type="number" id="sqrtrad" placeholder="radicand" class="form-control mb-0" step="0.1" min="0" />
+                <input type="number" id="sqrtrad" placeholder="radicand" class="form-control mb-0" step="0.1"  />
             </div>
             <br />
             <div class="center-form">
@@ -69,7 +69,7 @@
         <form autocomplete="off">
             <h3 class="text-white">Cube Root</h3>
             <div class="center-form">
-                <input type="number" id="cbrtrad" placeholder="radicand" class="form-control mb-0" step="0.1" min="0" />
+                <input type="number" id="cbrtrad" placeholder="radicand" class="form-control mb-0" step="0.1"  />
             </div>
             <br />
             <div class="center-form">
@@ -90,12 +90,12 @@
             <h3 class="text-white">n<sup>th</sup> Root</h3>
             <div class="center-form">
                 <input type="number" id="nrootexp" placeholder="exponent" class="form-control mb-0" step="0.1"
-                    min="0" />
+                     />
             </div>
             <br />
             <div class="center-form">
                 <input type="number" id="nrootrad" placeholder="radicant" class="form-control mb-0" step="0.1"
-                    min="0" />
+                     />
             </div>
             <br />
             <div class="center-form">
