--- a/acidmetalreaction.html
+++ b/acidmetalreaction.html
@@ -24,7 +24,7 @@
     <meta name="twitter:image" content="https://www.mathflare.xyz/Assets/logo.png">
     <link rel="home" href="https://www.mathflare.xyz">
     <!-- STYLES / ICONS -->
-    <link href="Styles/bootstrap-5.0-min.css" rel="stylesheet" />
+    <link href="Styles/bootstrap.min.css" rel="stylesheet" />
     <link href="Styles/Scrollbar.css" rel="stylesheet" />
     <link href="Styles/Site.css" rel="stylesheet" />
     <link rel="manifest" href="manifest.json">
@@ -33,6 +33,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="Assets/apple-touch-icon.png">
     <!-- SCRIPTS -->
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script src="dist/jquery.min.js" defer></script>
+    <script src="dist/bootstrap.min.js" defer></script>
     <script src="dist/navbar.js" defer></script>
     <script src="dist/common.js" defer></script>
     <script src="dist/main.js" defer></script>
@@ -51,10 +53,8 @@
             <div class="center-form">
                 <div class="input-group">
                     <span class="input-group-text">index</span>
-                    <input type="number" id="x" placeholder="x" class="form-control input-group-item" step="0.1"
-                         />
-                    <input type="text" id="m" placeholder="M" class="form-control input-group-item" step="0.1"
-                         />
+                    <input type="number" id="x" placeholder="x" class="form-control input-group-item" step="0.1" />
+                    <input type="text" id="m" placeholder="M" class="form-control input-group-item" step="0.1" />
                     <span class="input-group-text">metal</span>
                 </div>
             </div>
@@ -62,10 +62,8 @@
             <div class="center-form">
                 <div class="input-group">
                     <span class="input-group-text">non-metal</span>
-                    <input type="text" id="y" placeholder="Y" class="form-control input-group-item" step="0.1"
-                         />
-                    <input type="number" id="v" placeholder="v" class="form-control input-group-item" step="0.1"
-                         />
+                    <input type="text" id="y" placeholder="Y" class="form-control input-group-item" step="0.1" />
+                    <input type="number" id="v" placeholder="v" class="form-control input-group-item" step="0.1" />
                     <span class="input-group-text">index</span>
                 </div>
             </div>
@@ -86,8 +84,7 @@
         <br />
     </div>
     <!-- SCRIPTS START -->
-    <script src="dist/jquery-3.6.0-min.js"></script>
-    <script src="dist/bootstrap-5.1-min.js"></script>
+    
     <script src="dist/acidmetalreaction.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
