--- a/area.html
+++ b/area.html
@@ -25,7 +25,7 @@
     <meta name="twitter:image" content="https://www.mathflare.xyz/Assets/logo.png">
     <link rel="home" href="https://www.mathflare.xyz">
     <!-- STYLES / ICONS -->
-    <link href="Styles/bootstrap-5.0-min.css" rel="stylesheet" />
+    <link href="Styles/bootstrap.min.css" rel="stylesheet" />
     <link href="Styles/Scrollbar.css" rel="stylesheet" />
     <link href="Styles/Site.css" rel="stylesheet" />
     <link rel="manifest" href="manifest.json">
@@ -34,6 +34,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="Assets/apple-touch-icon.png">
     <!-- SCRIPTS -->
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script src="dist/jquery.min.js" defer></script>
+    <script src="dist/bootstrap.min.js" defer></script>
     <script src="dist/navbar.js" defer></script>
     <script src="dist/common.js" defer></script>
     <script src="dist/main.js" defer></script>
@@ -52,7 +54,7 @@
                 <div class="input-group">
                     <span class="input-group-text">cm</span>
                     <input type="number" id="squareside" placeholder="side" class="form-control mb-0 input-group-item"
-                        step="0.1"  />
+                        step="0.1" />
                 </div>
             </div>
             <br />
@@ -76,7 +78,7 @@
                 <div class="input-group">
                     <span class="input-group-text">cm</span>
                     <input type="number" id="paraw" placeholder="width" class="form-control mb-0 input-group-item"
-                        step="0.1"  />
+                        step="0.1" />
                 </div>
             </div>
             <br />
@@ -84,7 +86,7 @@
                 <div class="input-group">
                     <span class="input-group-text">cm</span>
                     <input type="number" id="parah" placeholder="height" class="form-control mb-0 input-group-item"
-                        step="0.1"  />
+                        step="0.1" />
                 </div>
             </div>
             <br />
@@ -108,7 +110,7 @@
                 <div class="input-group">
                     <span class="input-group-text">cm</span>
                     <input type="number" id="tria" placeholder="segment" class="form-control mb-0 input-group-item"
-                        step="0.1"  />
+                        step="0.1" />
                 </div>
             </div>
             <br />
@@ -116,7 +118,7 @@
                 <div class="input-group">
                     <span class="input-group-text">cm</span>
                     <input type="number" id="trib" placeholder="corresponding height"
-                        class="form-control mb-0 input-group-item" step="0.1"  />
+                        class="form-control mb-0 input-group-item" step="0.1" />
                 </div>
             </div>
             <br />
@@ -140,7 +142,7 @@
                 <div class="input-group">
                     <span class="input-group-text">cm</span>
                     <input type="number" id="etris" placeholder="side" class="form-control mb-0 input-group-item"
-                        step="0.1"  />
+                        step="0.1" />
                 </div>
             </div>
             <br />
@@ -164,7 +166,7 @@
                 <div class="input-group">
                     <span class="input-group-text">cm</span>
                     <input type="number" id="circler" placeholder="radius" class="form-control mb-0 input-group-item"
-                        step="0.1"  />
+                        step="0.1" />
                 </div>
             </div>
             <br />
@@ -188,7 +190,7 @@
                 <div class="input-group">
                     <span class="input-group-text">cm</span>
                     <input type="number" id="trapa" placeholder="small segment"
-                        class="form-control mb-0 input-group-item" step="0.1"  />
+                        class="form-control mb-0 input-group-item" step="0.1" />
                 </div>
             </div>
             <br />
@@ -196,7 +198,7 @@
                 <div class="input-group">
                     <span class="input-group-text">cm</span>
                     <input type="number" id="trapb" placeholder="large segment"
-                        class="form-control mb-0 input-group-item" step="0.1"  />
+                        class="form-control mb-0 input-group-item" step="0.1" />
                 </div>
             </div>
             <br />
@@ -204,7 +206,7 @@
                 <div class="input-group">
                     <span class="input-group-text">cm</span>
                     <input type="number" id="trapc" placeholder="height" class="form-control mb-0 input-group-item"
-                        step="0.1"  />
+                        step="0.1" />
                 </div>
             </div>
             <br />
@@ -224,8 +226,7 @@
         <br />
     </div>
     <!-- SCRIPTS START -->
-    <script src="dist/jquery-3.6.0-min.js"></script>
-    <script src="dist/bootstrap-5.1-min.js"></script>
+    
     <script src="dist/area.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
