--- a/bmi.html
+++ b/bmi.html
@@ -25,7 +25,7 @@
     <meta name="twitter:image" content="https://www.mathflare.xyz/Assets/logo.png">
     <link rel="home" href="https://www.mathflare.xyz">
     <!-- STYLES / ICONS -->
-    <link href="Styles/bootstrap-5.0-min.css" rel="stylesheet" />
+    <link href="Styles/bootstrap.min.css" rel="stylesheet" />
     <link href="Styles/Scrollbar.css" rel="stylesheet" />
     <link href="Styles/Site.css" rel="stylesheet" />
     <link rel="manifest" href="manifest.json">
@@ -34,6 +34,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="Assets/apple-touch-icon.png">
     <!-- SCRIPTS -->
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script src="dist/jquery.min.js" defer></script>
+    <script src="dist/bootstrap.min.js" defer></script>
     <script src="dist/navbar.js" defer></script>
     <script src="dist/common.js" defer></script>
     <script src="dist/main.js" defer></script>
@@ -52,7 +54,7 @@
                 <div class="input-group">
                     <span class="input-group-text">Kg</span>
                     <input type="number" id="weight" placeholder="weight" class="form-control mb-0 input-group-item"
-                        step="0.1"  />
+                        step="0.1" />
                 </div>
             </div>
             <br />
@@ -61,7 +63,7 @@
                 <div class="input-group">
                     <span class="input-group-text">cm</span>
                     <input type="number" id="height" placeholder="height" class="form-control mb-0 input-group-item"
-                        step="0.1"  />
+                        step="0.1" />
                 </div>
             </div>
             <br />
@@ -110,8 +112,7 @@
         <p class="mb-4"><i class="bi bi-lightning"></i> We do not store or process the information you enter.</p>
     </div>
     <!-- SCRIPTS START -->
-    <script src="dist/jquery-3.6.0-min.js"></script>
-    <script src="dist/bootstrap-5.1-min.js"></script>
+
     <script src="dist/bmi.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
