--- a/concentration.html
+++ b/concentration.html
@@ -25,7 +25,7 @@
     <meta name="twitter:image" content="https://www.mathflare.xyz/Assets/logo.png">
     <link rel="home" href="https://www.mathflare.xyz">
     <!-- STYLES / ICONS -->
-    <link href="Styles/bootstrap-5.0-min.css" rel="stylesheet" />
+    <link href="Styles/bootstrap.min.css" rel="stylesheet" />
     <link href="Styles/Scrollbar.css" rel="stylesheet" />
     <link href="Styles/Site.css" rel="stylesheet" />
     <link rel="manifest" href="manifest.json">
@@ -34,6 +34,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="Assets/apple-touch-icon.png">
     <!-- SCRIPTS -->
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script src="dist/jquery.min.js" defer></script>
+    <script src="dist/bootstrap.min.js" defer></script>
     <script src="dist/navbar.js" defer></script>
     <script src="dist/common.js" defer></script>
     <script src="dist/main.js" defer></script>
@@ -58,8 +60,7 @@
             <br />
             <h4 class="text-white">Solution</h4>
             <div class="center-form">
-                <input type="number" id="concsolution" placeholder="solution weight" class="form-control mb-0"
-                     />
+                <input type="number" id="concsolution" placeholder="solution weight" class="form-control mb-0" />
             </div>
             <br />
             <h4 class="text-white">Disolved Substance</h4>
@@ -98,8 +99,7 @@
             <br />
             <h4 class="text-white">Solution</h4>
             <div class="center-form">
-                <input type="number" id="dsubsolution" placeholder="solution weight" class="form-control mb-0"
-                     />
+                <input type="number" id="dsubsolution" placeholder="solution weight" class="form-control mb-0" />
             </div>
             <br />
             <h4 class="text-white">Concentration</h4>
@@ -139,8 +139,7 @@
             <br />
             <h4 class="text-white">Disolved Substance</h4>
             <div class="center-form">
-                <input type="number" id="soldsub" placeholder="disolved substance weight" class="form-control mb-0"
-                     />
+                <input type="number" id="soldsub" placeholder="disolved substance weight" class="form-control mb-0" />
             </div>
             <br />
             <h4 class="text-white">Concentration</h4>
@@ -165,8 +164,7 @@
         </div>
     </div>
     <!-- SCRIPTS START -->
-    <script src="dist/jquery-3.6.0-min.js"></script>
-    <script src="dist/bootstrap-5.1-min.js"></script>
+    
     <script src="dist/concentration.js"></script>
     <script src="dist/concentration-disolvedsub.js"></script>
     <script src="dist/concentration-solution.js"></script>
