--- a/diagpolyg.html
+++ b/diagpolyg.html
@@ -27,7 +27,7 @@
     <meta name="twitter:image" content="https://www.mathflare.xyz/Assets/logo.png">
     <link rel="home" href="https://www.mathflare.xyz">
     <!-- STYLES / ICONS -->
-    <link href="Styles/bootstrap-5.0-min.css" rel="stylesheet" />
+    <link href="Styles/bootstrap.min.css" rel="stylesheet" />
     <link href="Styles/Scrollbar.css" rel="stylesheet" />
     <link href="Styles/Site.css" rel="stylesheet" />
     <link rel="manifest" href="manifest.json">
@@ -36,6 +36,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="Assets/apple-touch-icon.png">
     <!-- SCRIPTS -->
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script src="dist/jquery.min.js" defer></script>
+    <script src="dist/bootstrap.min.js" defer></script>
     <script src="dist/navbar.js" defer></script>
     <script src="dist/common.js" defer></script>
     <script src="dist/main.js" defer></script>
@@ -53,8 +55,7 @@
             <div class="center-form">
                 <div class="input-group">
                     <span class="input-group-text">cm</span>
-                    <input type="number" id="sside" placeholder="side" class="form-control mb-0 input-group-item"
-                         />
+                    <input type="number" id="sside" placeholder="side" class="form-control mb-0 input-group-item" />
                 </div>
             </div>
             <br />
@@ -78,7 +79,7 @@
                 <div class="input-group">
                     <span class="input-group-text">cm</span>
                     <input type="number" id="pcd" placeholder="first side" class="form-control mb-0 input-group-item"
-                         step="0.1" />
+                        step="0.1" />
                 </div>
             </div>
             <br />
@@ -86,14 +87,14 @@
                 <div class="input-group">
                     <span class="input-group-text">cm</span>
                     <input type="number" id="pad" placeholder="second side" class="form-control mb-0 input-group-item"
-                         step="0.1" />
+                        step="0.1" />
                 </div>
             </div>
             <br />
             <div class="center-form">
                 <div class="input-group">
                     <span class="input-group-text">degrees&#176;</span>
-                    <input type="number" id="pd" placeholder="angle" class="form-control mb-0 input-group-item" 
+                    <input type="number" id="pd" placeholder="angle" class="form-control mb-0 input-group-item"
                         step="0.1" />
                 </div>
             </div>
@@ -217,8 +218,7 @@
             <br />
     </div>
     <!-- SCRIPTS START -->
-    <script src="dist/jquery-3.6.0-min.js"></script>
-    <script src="dist/bootstrap-5.1-min.js"></script>
+    
     <script src="dist/diagpolyg.js"></script>
     <script src="dist/diagtrapezoid.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
