--- a/imperfcarboncombust.html
+++ b/imperfcarboncombust.html
@@ -25,7 +25,7 @@
     <meta name="twitter:image" content="https://www.mathflare.xyz/Assets/logo.png">
     <link rel="home" href="https://www.mathflare.xyz">
     <!-- STYLES / ICONS -->
-    <link href="Styles/bootstrap-5.0-min.css" rel="stylesheet" />
+    <link href="Styles/bootstrap.min.css" rel="stylesheet" />
     <link href="Styles/Scrollbar.css" rel="stylesheet" />
     <link href="Styles/Site.css" rel="stylesheet" />
     <link rel="manifest" href="manifest.json">
@@ -34,6 +34,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="Assets/apple-touch-icon.png">
     <!-- SCRIPTS -->
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script src="dist/jquery.min.js" defer></script>
+    <script src="dist/bootstrap.min.js" defer></script>
     <script src="dist/navbar.js" defer></script>
     <script src="dist/common.js" defer></script>
     <script src="dist/main.js" defer></script>
@@ -66,7 +68,7 @@
             <br />
             <h4 class="text-white">Enter the numbers of Carbons C</h4>
             <div class="center-form">
-                <input type="number" id="carbons" placeholder="carbons" class="form-control mb-0" step="1"  />
+                <input type="number" id="carbons" placeholder="carbons" class="form-control mb-0" step="1" />
             </div>
             <br />
             <div class="center-form">
@@ -79,13 +81,12 @@
         </div>
         <br />
         <div class="my-4">
-            <a href="https://duckduckgo.com/?q=calculate+incomplete+carbon+combustion" target="_blank"
-                rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+            <a href="https://duckduckgo.com/?q=calculate+incomplete+carbon+combustion" target="_blank" rel="noopener"
+                class="btn btn-outline-light">Find information on the web</a>
         </div>
     </div>
     <!-- SCRIPTS START -->
-    <script src="dist/jquery-3.6.0-min.js"></script>
-    <script src="dist/bootstrap-5.1-min.js"></script>
+    
     <script src="dist/carboncombustions-imperfect.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
