--- a/logar.html
+++ b/logar.html
@@ -24,7 +24,7 @@
     <meta name="twitter:image" content="https://www.mathflare.xyz/Assets/logo.png">
     <link rel="home" href="https://www.mathflare.xyz">
     <!-- STYLES / ICONS -->
-    <link href="Styles/bootstrap-5.0-min.css" rel="stylesheet" />
+    <link href="Styles/bootstrap.min.css" rel="stylesheet" />
     <link href="Styles/Scrollbar.css" rel="stylesheet" />
     <link href="Styles/Site.css" rel="stylesheet" />
     <link rel="manifest" href="manifest.json">
@@ -33,6 +33,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="Assets/apple-touch-icon.png">
     <!-- SCRIPTS -->
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script src="dist/jquery.min.js" defer></script>
+    <script src="dist/bootstrap.min.js" defer></script>
     <script src="dist/navbar.js" defer></script>
     <script src="dist/common.js" defer></script>
     <script src="dist/main.js" defer></script>
@@ -48,14 +50,14 @@
         <form autocomplete="off">
             <h4 class="text-white">Enter the number</h4>
             <div class="center-form">
-                <input type="number" id="number" placeholder="number" name="side" class="form-control mb-0" step="0.1"
-                     />
+                <input type="number" id="number" placeholder="number" name="side" class="form-control mb-0"
+                    step="0.1" />
             </div>
             <br />
             <h4 class="text-white">Enter the logarithm's base(10 is the default)</h4>
             <div class="center-form">
                 <input type="number" id="base" placeholder="base" value="10" name="side" class="form-control mb-0"
-                    step="0.1"  />
+                    step="0.1" />
             </div>
             <br />
             <div class="center-form">
@@ -75,8 +77,8 @@
         <h3>Natural Logarithm; log<sub>e</sub></h3>
         <form autocomplete="off">
             <div class="center-form">
-                <input type="number" id="natnum" placeholder="number" name="side" class="form-control mb-0" step="0.1"
-                     />
+                <input type="number" id="natnum" placeholder="number" name="side" class="form-control mb-0"
+                    step="0.1" />
             </div>
             <br />
             <div class="center-form">
@@ -95,8 +97,7 @@
         <br />
     </div>
     <!-- SCRIPTS START -->
-    <script src="dist/jquery-3.6.0-min.js"></script>
-    <script src="dist/bootstrap-5.1-min.js"></script>
+    
     <script src="dist/logar.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
