--- a/perimeter.html
+++ b/perimeter.html
@@ -25,7 +25,7 @@
     <meta name="twitter:image" content="https://www.mathflare.xyz/Assets/logo.png">
     <link rel="home" href="https://www.mathflare.xyz">
     <!-- STYLES / ICONS -->
-    <link href="Styles/bootstrap-5.0-min.css" rel="stylesheet" />
+    <link href="Styles/bootstrap.min.css" rel="stylesheet" />
     <link href="Styles/Scrollbar.css" rel="stylesheet" />
     <link href="Styles/Site.css" rel="stylesheet" />
     <link rel="manifest" href="manifest.json">
@@ -34,6 +34,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="Assets/apple-touch-icon.png">
     <!-- SCRIPTS -->
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script src="dist/jquery.min.js" defer></script>
+    <script src="dist/bootstrap.min.js" defer></script>
     <script src="dist/navbar.js" defer></script>
     <script src="dist/common.js" defer></script>
     <script src="dist/main.js" defer></script>
@@ -49,7 +51,7 @@
         <form autocomplete="off">
             <h4 class="text-white"><i class="bi bi-square"></i> Square</h4>
             <div class="center-form">
-                <input type="number" id="squaren" placeholder="side" class="form-control mb-0" step="0.1"  />
+                <input type="number" id="squaren" placeholder="side" class="form-control mb-0" step="0.1" />
             </div>
             <br />
             <div class="center-form">
@@ -69,11 +71,11 @@
         <form autocomplete="off">
             <h4 class="text-white"><i class="bi bi-file"></i> Parallelogram</h4>
             <div class="center-form">
-                <input type="number" id="paraw" placeholder="width" class="form-control mb-0" step="0.1"  />
+                <input type="number" id="paraw" placeholder="width" class="form-control mb-0" step="0.1" />
             </div>
             <br />
             <div class="center-form">
-                <input type="number" id="parah" placeholder="height" class="form-control mb-0" step="0.1"  />
+                <input type="number" id="parah" placeholder="height" class="form-control mb-0" step="0.1" />
             </div>
             <br />
             <div class="center-form">
@@ -93,15 +95,15 @@
         <form autocomplete="off">
             <h4 class="text-white"><i class="bi bi-triangle"></i> Triangle</h4>
             <div class="center-form">
-                <input type="number" id="tria" placeholder="first side" class="form-control mb-0" step="0.1"  />
+                <input type="number" id="tria" placeholder="first side" class="form-control mb-0" step="0.1" />
             </div>
             <br />
             <div class="center-form">
-                <input type="number" id="trib" placeholder="second side" class="form-control mb-0" step="0.1"  />
+                <input type="number" id="trib" placeholder="second side" class="form-control mb-0" step="0.1" />
             </div>
             <br />
             <div class="center-form">
-                <input type="number" id="tric" placeholder="third side" class="form-control mb-0" step="0.1"  />
+                <input type="number" id="tric" placeholder="third side" class="form-control mb-0" step="0.1" />
             </div>
             <br />
             <div class="center-form">
@@ -121,7 +123,7 @@
         <form autocomplete="off">
             <h4 class="text-white"><i class="bi bi-triangle"></i> Equilateral Triangle</h4>
             <div class="center-form">
-                <input type="number" id="trin" placeholder="side" class="form-control mb-0" step="0.1"  />
+                <input type="number" id="trin" placeholder="side" class="form-control mb-0" step="0.1" />
             </div>
             <br />
             <div class="center-form">
@@ -141,7 +143,7 @@
         <form autocomplete="off">
             <h4 class="text-white"><i class="bi bi-circle"></i> Circle</h4>
             <div class="center-form">
-                <input type="number" id="circler" placeholder="radius" class="form-control mb-0" step="0.1"  />
+                <input type="number" id="circler" placeholder="radius" class="form-control mb-0" step="0.1" />
             </div>
             <br />
             <div class="center-form">
@@ -176,8 +178,7 @@
         <br />
     </div>
     <!-- SCRIPTS START -->
-    <script src="dist/jquery-3.6.0-min.js"></script>
-    <script src="dist/bootstrap-5.1-min.js"></script>
+    
     <script src="dist/perimeter.js"></script>
     <script src="dist/perim-polyg.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
