--- a/quadraticequations.html
+++ b/quadraticequations.html
@@ -10,7 +10,8 @@
     <meta name="title" content="MathFlare - Quadratic Equation Solver">
     <meta name="og:title" content="MathFlare - Quadratic Equation Solver" />
     <meta name="twitter:title" content="MathFlare - Quadratic Equation Solver" />
-    <meta name="keywords" content="quadratic equations, quadratic, solve equations, second degree equations, algebra, math, mathflare, math flare">
+    <meta name="keywords"
+        content="quadratic equations, quadratic, solve equations, second degree equations, algebra, math, mathflare, math flare">
     <meta name="description" content="Easily solve quadratic equations" />
     <meta name="og:description" content="Easily solve quadratic equations" />
     <meta name="twitter:description" content="Easily solve quadratic equations" />
@@ -24,7 +25,7 @@
     <meta name="twitter:image" content="https://www.mathflare.xyz/Assets/logo.png">
     <link rel="home" href="https://www.mathflare.xyz">
     <!-- STYLES / ICONS -->
-    <link href="Styles/bootstrap-5.0-min.css" rel="stylesheet" />
+    <link href="Styles/bootstrap.min.css" rel="stylesheet" />
     <link href="Styles/Scrollbar.css" rel="stylesheet" />
     <link href="Styles/Site.css" rel="stylesheet" />
     <link rel="manifest" href="manifest.json">
@@ -33,6 +34,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="Assets/apple-touch-icon.png">
     <!-- SCRIPTS -->
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script src="dist/jquery.min.js" defer></script>
+    <script src="dist/bootstrap.min.js" defer></script>
     <script src="dist/navbar.js" defer></script>
     <script src="dist/common.js" defer></script>
     <script src="dist/main.js" defer></script>
@@ -129,8 +132,7 @@
         <!-- YX = Z END  -->
     </div>
     <!-- SCRIPTS START -->
-    <script src="dist/jquery-3.6.0-min.js"></script>
-    <script src="dist/bootstrap-5.1-min.js"></script>
+    
     <script src="dist/equations-second-deg.js"></script>
     <script>
         let storage = window.localStorage, equation;
