--- a/roots.html
+++ b/roots.html
@@ -25,7 +25,7 @@
     <meta name="twitter:image" content="https://www.mathflare.xyz/Assets/logo.png">
     <link rel="home" href="https://www.mathflare.xyz">
     <!-- STYLES / ICONS -->
-    <link href="Styles/bootstrap-5.0-min.css" rel="stylesheet" />
+    <link href="Styles/bootstrap.min.css" rel="stylesheet" />
     <link href="Styles/Scrollbar.css" rel="stylesheet" />
     <link href="Styles/Site.css" rel="stylesheet" />
     <link rel="manifest" href="manifest.json">
@@ -34,6 +34,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="Assets/apple-touch-icon.png">
     <!-- SCRIPTS -->
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script src="dist/jquery.min.js" defer></script>
+    <script src="dist/bootstrap.min.js" defer></script>
     <script src="dist/navbar.js" defer></script>
     <script src="dist/common.js" defer></script>
     <script src="dist/main.js" defer></script>
@@ -49,7 +51,7 @@
         <form autocomplete="off">
             <h3 class="text-white">Square Root</h3>
             <div class="center-form">
-                <input type="number" id="sqrtrad" placeholder="radicand" class="form-control mb-0" step="0.1"  />
+                <input type="number" id="sqrtrad" placeholder="radicand" class="form-control mb-0" step="0.1" />
             </div>
             <br />
             <div class="center-form">
@@ -69,7 +71,7 @@
         <form autocomplete="off">
             <h3 class="text-white">Cube Root</h3>
             <div class="center-form">
-                <input type="number" id="cbrtrad" placeholder="radicand" class="form-control mb-0" step="0.1"  />
+                <input type="number" id="cbrtrad" placeholder="radicand" class="form-control mb-0" step="0.1" />
             </div>
             <br />
             <div class="center-form">
@@ -89,13 +91,11 @@
         <form autocomplete="off">
             <h3 class="text-white">n<sup>th</sup> Root</h3>
             <div class="center-form">
-                <input type="number" id="nrootexp" placeholder="exponent" class="form-control mb-0" step="0.1"
-                     />
+                <input type="number" id="nrootexp" placeholder="exponent" class="form-control mb-0" step="0.1" />
             </div>
             <br />
             <div class="center-form">
-                <input type="number" id="nrootrad" placeholder="radicant" class="form-control mb-0" step="0.1"
-                     />
+                <input type="number" id="nrootrad" placeholder="radicant" class="form-control mb-0" step="0.1" />
             </div>
             <br />
             <div class="center-form">
@@ -114,8 +114,7 @@
         <br />
     </div>
     <!-- SCRIPTS START -->
-    <script src="dist/jquery-3.6.0-min.js"></script>
-    <script src="dist/bootstrap-5.1-min.js"></script>
+    
     <script src="dist/sqrt.js"></script>
     <script src="dist/cbrt.js"></script>
     <script src="dist/nroot.js"></script>
