--- a/likefractions.html
+++ b/likefractions.html
@@ -11,7 +11,7 @@
     <meta name="og:title" content="MathFlare - Unlike to Like Fraction Converter" />
     <meta name="twitter:title" content="MathFlare - Unlike to Like Fraction Converter" />
     <meta name="keywords"
-        content="unlike fractions to like, like fractions, unlike to like, fractions, algebra fraction, algebra, math, mathflare, math flare">
+        content="unlike fractions to like, like fractions, unlike to like, convert unlike to like,fractions, algebra fraction, algebra, math, mathflare, math flare">
     <meta name="description" content="Convert unlike Fractions to like" />
     <meta name="og:description" content="Convert unlike Fractions to like" />
     <meta name="twitter:description" content="Convert unlike Fractions to like" />
@@ -79,7 +79,7 @@
         </div>
         <br />
         <div class="my-4">
-            <a href="https://duckduckgo.com/?q=Unlike+Fractions+to+Like" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=convert+unlike+to+like+fractions" target="_blank" rel="noopener"
                 class="btn btn-outline-light m-2">Find information on the web</a>
         </div>
     </div>
