prod: changed menu button. slogan and search

--- a/gcd.html
+++ b/gcd.html
@@ -6,15 +6,15 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MathFlare - Greatest Common Devisor Calculator</title>
-    <meta name="title" content="MathFlare - Greatest Common Devisor Calculator">
-    <meta name="og:title" content="MathFlare - MathFlare - Greatest Common Devisor Calculator" />
-    <meta name="twitter:title" content="MathFlare - MathFlare - Greatest Common Devisor Calculator" />
+    <title>MathFlare - Greatest Common Divisor Calculator</title>
+    <meta name="title" content="MathFlare - Greatest Common Divisor Calculator">
+    <meta name="og:title" content="MathFlare - MathFlare - Greatest Common Divisor Calculator" />
+    <meta name="twitter:title" content="MathFlare - MathFlare - Greatest Common Divisor Calculator" />
     <meta name="keywords"
-        content="gcd, calculate gcd, greatest common devisor calculator, algebra, math, mathflare, math flare">
-    <meta name="description" content="Calculate the greatest common devisor of 2 numbers" />
-    <meta name="og:description" content="Calculate the greatest common devisor of 2 numbers" />
-    <meta name="twitter:description" content="Calculate the greatest common devisor of 2 numbers" />
+        content="gcd, calculate gcd, greatest common divisor calculator, algebra, math, mathflare, math flare">
+    <meta name="description" content="Calculate the greatest common divisor of 2 numbers" />
+    <meta name="og:description" content="Calculate the greatest common divisor of 2 numbers" />
+    <meta name="twitter:description" content="Calculate the greatest common divisor of 2 numbers" />
     <meta name="author" content="MathFlare.xyz" />
     <meta name="og:url" content="https://www.mathflare.xyz/gcd" />
     <link rel="canonical" href="https://www.mathflare.xyz/gcd">
@@ -46,7 +46,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Greatest Common Devisor Calculator</h1>
+        <h1 class="text-white">Greatest Common Divisor Calculator</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
             <h4 class="text-white">Enter the first number</h4>
@@ -69,16 +69,13 @@
         </div>
         <br />
         <div class="my-4">
-            <a href="https://duckduckgo.com/?q=calculate+the+greatest+common+devisor" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=calculate+the+greatest+common+divisor" target="_blank" rel="noopener"
                 class="btn btn-outline-light m-2">Find information on the web</a>
         </div>
         <br />
     </div>
-    <!-- SCRIPTS START -->
-    
     <script src="dist/gcd.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
-    <!-- SCRIPT END -->
 </body>
 
 </html>
