--- a/index.html
+++ b/index.html
@@ -61,13 +61,31 @@
         <div class="text-center mb-5">
             <h1 class="display-5" style="font-weight: 450;"><img src="Assets/icon.png" class="user-select-none mb-1"
                     style="height: 1em;" alt="logo"> MathFlare</h1>
-            <p class="lead fs-4 fw-normal text-danger" style="font-family: 'Mathnito', 'MathFont', sans-serif;">the
-                go-to
-                website for algebra and geometry</p>
+            <p class="lead fs-4 fw-normal text-danger" id="slogan"
+                style="font-family: 'Mathnito', 'MathFont', sans-serif;"></p>
         </div>
-        <div class="center mb-5 mt-0">
-            <button class="btn btn-lg btn-outline-light" onclick="openSideBar()"><i class="bi bi-list"></i>
-                Menu</button>
+        <div style="margin-bottom: 7em;">
+            <h4 style="margin-bottom: 0.5em">Suggested</h4>
+            <div class="card-group">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Logarithm calculator</h5>
+                        <a href="logar.html" class="btn btn-outline-discrete mt-2">Go &raquo;</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Trigonometric calculator</h5>
+                        <a href="trigcalculator.html" class="btn btn-outline-discrete mt-2">Go &raquo;</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Linear system of equations solver</h5>
+                        <a href="linear-systems.html" class="btn btn-outline-discrete mt-2">Go &raquo;</a>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="row align-items-center justify-content-between mb-5">
             <div class="col-md">
@@ -135,12 +153,7 @@
             </div>
         </section>
     </div>
-    <!-- SCRIPTS START -->
-    
     <script>
-        const openSideBar = () => {
-            document.querySelector('.navbar-toggler').click();
-        }
         if (typeof (Storage) !== 'undefined') {
             let storage = window.localStorage, pageCount;
             window.addEventListener('load', () => {
@@ -158,7 +171,6 @@
         window.addEventListener('load', () => {
             document.querySelector('#home-link').classList.add('active');
         });
-
         const donateLinks = document.querySelectorAll('.donate-link');
         donateLinks.forEach(link => {
             link.addEventListener('mouseover', () => {
@@ -167,9 +179,26 @@
                 });
             });
         });
+        const slogans = [
+            'now with 50% more calculator!',
+            'gets the job done fast.',
+            'my doctor says \'MathFlare\'',
+            'next stop, MathFlare', 'satisfies the need.',
+            'standing above the rest with our calculators',
+            'MathFlare: the other white meat',
+            'Get MathFlare, forget the rest',
+            'Mathflare tested, mother approved.',
+            'Mathflare - empowering people.',
+            'Eureka!',
+            'Aaaahhh, Mathflare!',
+            'get your ducks in a row with MathFlare'
+        ];
+        const slogan = document.querySelector('#slogan');
+        window.addEventListener('load', () => {
+            slogan.innerText = (slogans[Math.floor(Math.random() * slogans.length)]).toLowerCase();
+        })
     </script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
-    <!-- SCRIPT END -->
 </body>
 
 </html>
